--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "node-cron": "^3.0.2",
     "web3": "^1.8.1"
   },
   "devDependencies": {
